# FiLotV2

./: .env.example  .replit  API_INTEGRATION_REPORT.md  BOT_REFERENCE.md  DATABASE_INDEPENDENT_GUIDE.md  FILOT_BOT_AUDIT_REPORT.md  FILOT_PRODUCTION_READY_REPORT.md  FINAL_PRODUCTION_SOLUTION.md  FiLot_Agentic_Investment_Technical_Spec.md  FiLot_Development_Roadmap.md  FiLot_Implementation_Plan.md  FiLot_Project_Summary.md  FiLot_Technical_Documentation.md  PRODUCTION_DEPLOYMENT_GUIDE.md  Procfile  README.md  README_PRODUCTION.md  REMOTE_DEBUGGING_GUIDE.md  RL_INVESTMENT_API_UPDATE_SUMMARY.md  RL_INVESTMENT_INTEGRATION_REPORT.md  SOLANA_TRANSACTION_INTEGRATION.md  TRANSACTION_SAFETY_GUIDE.md  ULTRA_SIMPLE_BOT_INSTRUCTIONS.md  USER_TRANSACTION_GUIDE.md  WALLET_INTEGRATION.md  add_sample_pool_data.py  agentic_advisor.py  ai_service.py  anthropic_service.py  anti_loop.py  api_test.py  app.py  bot.py  bot_status.db  bot_worker.py  button_responses.py  button_responses.py.new  callback_handler.py  callback_report.md  check_api.py  (+85 more)
attached_assets/: API Documentation.txt  API_EXAMPLES.md  Agentic FiLot BOT V3 Prompt.txt  Client API Intergration.txt  Client SIDE BUG FIX1.txt  Client Side BUG fix2.txt  Error Log5 (1).txt  Error Log6 (1).txt  Errorlog 1.txt  Errorlog3.txt  Errorlog7.txt  FiLot Fixxing Prompt 2.txt  FiLot Fixxing Prompt 3.txt  FiLot Fixxing Prompt 4.txt  FiLot Fixxing Prompt 5.txt  FiLot Fixxing Prompt 6.txt  FiLot Fixxing Prompt.txt  FiLot RAYDIUM API Documentation.txt  FilotSense Public API Documentation.txt  Indexjs.txt  Main PY New for Bot.docx  Mainpy.txt  (+13 more)
(+16 files in other folders)
