[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "anchorpy>=0.21.0",
    "anthropic>=0.49.0",
    "base58>=2.1.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[all]==20.6",
    "qrcode>=8.1",
    "requests>=2.32.3",
    "solana>=0.36.6",
    "solders>=0.26.0",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "urllib3>=2.4.0",
]
